test/vm/errors/bigint_type_mismatch.ach
// Expected error: Cannot mix BigInt and Int
let a = bigint256(10)
let b = 10
let c = a + b
